--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,38 @@
     border: 0;
 }
 
+header {
+    margin-bottom: 2vh;
+}
+
 body {
     width: 100%;
-    height: 110vh;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 
-    background-color: rgb(255, 221, 227);
+    background-color: #ff99c9;
 }
 
 .content {
-    width: 90%;
-    height: inherit;
+    width: 80vw;
+    height: 90vh;
 
     display: flex;
+    flex-shrink: 0;
     justify-content: space-around;
     align-items: center;
     gap: 2vw;
 
-    background-color: aqua;
+    background-color: #56cbf9;
+    border-radius: 25px;
 }
 
 .etch-tools {
+    width: 10%;
     height: 90%;
 
     display: flex;
@@ -37,8 +44,14 @@ body {
 }
 
 #grid-container {
-    width: 60%;
-    height: 90%;
+    width: 42vw;
+    height: 42vw;
 
-    background-color: sandybrown;
+    background-color: whitesmoke;
+}
+
+.etch-cell {
+    float: left;
+
+    background-color: black;
 }
